# LE-audio

./: ALTERNATE_PIPEWIRE  CMakeLists.txt  PipeWire_LE_Audio_Minimal_Implementation_Document 1.docx  disconnect&connect  leaudio_wot_pipewire.docx  minicom-playing_logs  night_logs  required  starting_bluetoothd  working_bluetoothd_pipewire
include/: lc3_pipe.h
src/: lc3_pipe.c  leaudiod.c
